feat: add BanUserForever api; fix: replace email with @danta.tech
